istio-teaching/gateway/http3/gw-httpbin.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "httpbin.quic-corp.com"
    - "*"
    tls:
      mode: SIMPLE
      credentialName: httpbin-cred
